🔒 Implement comprehensive security best practices
Security Enhancements:
- Added comprehensive .gitignore with security patterns
- Protected sensitive files (.env, credentials, keys, tokens)
- Created SECURITY.md with detailed security guidelines
- Sanitized .env file and created .env.example template
- Added push_to_github.sh script for easy deployment

Security Features:
✅ OAuth 2.0 credential protection
✅ Environment variable security
✅ API key and token exclusion
✅ Development file protection (.vscode, .idea, etc.)
✅ Google Cloud credential safeguards
✅ Temporary file and cache exclusion
✅ macOS/Windows/Linux system file filtering
✅ Python build artifact exclusion
✅ Security scan report protection

Best Practices Implemented:
- Minimal OAuth scopes (read-only access)
- No sensitive data in version control
- Comprehensive documentation for secure development
- Incident response procedures
- Audit and monitoring guidelines

Repository is now secure and ready for public collaboration!

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # =============================================================================
-# MEETING PREP AGENT CONFIGURATION
+# MEETING PREP AGENT CONFIGURATION - EXAMPLE
 # =============================================================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env file to version control!
 
 # =============================================================================
 # REQUIRED: AgentSpace / ADK Configuration
@@ -9,25 +11,25 @@
 GOOGLE_CLOUD_PROJECT=your-project-id
 
 # Your Google Cloud Project Number (required for agent creation)
-GOOGLE_CLOUD_PROJECT_NUMBER=123456789012
+GOOGLE_CLOUD_PROJECT_NUMBER=your-project-number
 
 # Google Cloud region (required)
 GOOGLE_CLOUD_LOCATION=us-central1
 
 # Cloud Storage bucket for staging (required)
-STAGING_BUCKET=your-staging-bucket
+STAGING_BUCKET=gs://your-staging-bucket
 
 # AgentSpace Authorization ID (set after running create_authorization.sh)
 AUTH_ID=meeting-prep-auth
 
 # Display name for your agent
-AGENT_DISPLAY_NAME=Meeting Prep Agent
+AGENT_DISPLAY_NAME=Meeting_Prep_Agent
 
 # =============================================================================
 # REQUIRED: OAuth 2.0 Credentials (for AgentSpace)
 # =============================================================================
 # Get these from Google Cloud Console > APIs & Services > Credentials
-CLIENT_ID=your-oauth-client-id.googleusercontent.com
+CLIENT_ID=your-oauth-client-id
 CLIENT_SECRET=your-oauth-client-secret
 
 # =============================================================================
@@ -43,13 +45,13 @@ ASSISTANT_ID=default_assistant
 AGENT_NAME=meeting-prep-agent
 
 # Agent description
-AGENT_DESCRIPTION=Prepares concise meeting briefs with Calendar, Drive, and Slack context
+AGENT_DESCRIPTION="Prepares concise meeting briefs with Calendar, Drive, and Slack context"
 
 # Tool description
-TOOL_DESCRIPTION=Gathers meeting context from Calendar, Drive docs, and Slack to prepare comprehensive briefs
+TOOL_DESCRIPTION="Gathers meeting context from Calendar, Drive docs, and Slack to prepare comprehensive briefs"
 
 # Reasoning Engine resource name (set after agent deployment)
-REASONING_ENGINE=projects/PROJECT_NUMBER/locations/LOCATION/reasoningEngines/ENGINE_ID
+REASONING_ENGINE=projects/your-project-number/locations/us-central1/reasoningEngines/your-engine-id
 
 # =============================================================================
 # AI Models (optional - defaults to gemini-2.5-flash)
@@ -79,4 +81,4 @@ SLACK_SIGNING_SECRET=your-slack-signing-secret
 # OAuth Scopes (used by create_authorization.sh)
 # =============================================================================
 # Space-separated list of required OAuth scopes
-SCOPES=https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/drive.readonly https://www.googleapis.com/auth/userinfo.email
+SCOPES="https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/drive.readonly https://www.googleapis.com/auth/userinfo.email"
