--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,421 @@
-# IntelliJ-specific files
-.idea/
-*.iml
-scratch.py
+# =============================================================================
+# SECURITY - SENSITIVE FILES (NEVER COMMIT THESE)
+# =============================================================================
+
+# Environment files with secrets
 .env
-agentspace_scripts/
-jt_agentspace_scripts/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
 
-# Python bytecode
-__pycache__/
-*.pyc
-
-# Virtual environment
-# Exclude the virtual environment directory, assuming it's named 'venv'
-venv/
-
-# Exclude specific credential files in the base directory
+# OAuth and API credentials
+client_secret*.json
+service_account*.json
 credentials.json
 token.json
+refresh_token.json
 
-# Operating system files
-.DS_Store # macOS
-Thumbs.db # Windows
+# Google Cloud credentials
+application_default_credentials.json
+gcloud_credentials.json
+*.pem
+*.p12
+*.key
+*.crt
+
+# API keys and secrets
+api_keys.txt
+secrets.txt
+config_secrets.py
+private_config.py
+
+# Database credentials
+database.env
+db_config.json
+
+# SSH keys
+id_rsa
+id_rsa.pub
+*.ssh
+
+# =============================================================================
+# PYTHON
+# =============================================================================
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+Pipfile.lock
+
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries.
+#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+poetry.lock
+
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/#use-with-ide
+.pdm.toml
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# =============================================================================
+# GOOGLE CLOUD / VERTEX AI
+# =============================================================================
+
+# Google Cloud SDK
+.gcloud/
+google-cloud-sdk/
+
+# Vertex AI artifacts
+vertex_ai_artifacts/
+model_artifacts/
+*.pkl
+*.joblib
+
+# Cloud Function deployments
+.gcloudignore
+
+# Terraform state files (if using Infrastructure as Code)
+*.tfstate
+*.tfstate.*
+.terraform/
+*.tfvars
+
+# =============================================================================
+# DEVELOPMENT TOOLS
+# =============================================================================
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.vim
+.netrwhist
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.Spotlight-V100
+.Trashes
+.fseventsd
+.TemporaryItems
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# =============================================================================
+# LOGS AND TEMPORARY FILES
+# =============================================================================
+
+# Application logs
+logs/
+*.log
+log_*.txt
+debug.log
+error.log
+access.log
+
+# Temporary files
+temp/
+tmp/
+*.tmp
+*.temp
+*.bak
+*.backup
+*.orig
+*.rej
+
+# Cache directories
+.cache/
+cache/
+__cache__/
+
+# =============================================================================
+# PROJECT SPECIFIC
+# =============================================================================
+
+# Meeting data and user content (privacy)
+meetings_data/
+user_calendars/
+attachment_cache/
+drive_cache/
+
+# Local configuration overrides
+local_config.py
+config_local.py
+settings_local.py
+
+# Test data with real user information
+test_data_real/
+sample_meetings/
+real_attachments/
+
+# Deployment artifacts
+deployment/
+staging/
+*.zip
+*.tar.gz
+
+# Agent build artifacts
+agent_builds/
+reasoning_engine_builds/
+
+# Development scripts with secrets
+deploy_prod.sh
+setup_prod.py
+*_with_secrets.*
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# =============================================================================
+# DOCUMENTATION BUILDS
+# =============================================================================
+
+# Sphinx build outputs
+_build/
+_static/
+_templates/
+
+# Jekyll
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+# =============================================================================
+# PACKAGE MANAGERS
+# =============================================================================
+
+# npm
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# Bower
+bower_components/
+
+# =============================================================================
+# SECURITY SCANNERS
+# =============================================================================
+
+# Security scan reports
+security_report.json
+vulnerability_scan.txt
+bandit_report.json
+
+# =============================================================================
+# CUSTOM EXCLUDES
+# =============================================================================
+
+# Add your custom files/patterns here
+# Example:
+# my_secret_file.txt
+# custom_config/
+
+# Backup files from editors
+*.bak
+*.backup
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store?
+Icon?
+.Trash
+.Trashes
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+
+# Windows image file caches
+Thumbs.db
+# Folder config file
+Desktop.ini
