🚀 Upgrade to Gemini 2.5 Flash - Latest AI Model
✨ Model Upgrade:
- Updated all GenerativeModel instances to use 'gemini-2.5-flash'
- Enhanced AI analysis capabilities across all features:
  * Attachment analysis and document insights
  * Slack message analysis and relevance detection
  * Meeting context research and preparation guidance

📚 Documentation Updates:
- Updated README.md with Gemini 2.5 Flash references
- Enhanced feature descriptions highlighting latest AI capabilities
- Updated .env.example with current model configuration
- Added AI model upgrade notes in example outputs

🎯 Deployment Details:
- Successfully deployed to AgentSpace: 2025-08-15 06:33:57 UTC
- Agent Resource: projects/777331773170/locations/us-central1/reasoningEngines/6897957720666669056
- All PRD features maintained with enhanced AI performance

🔧 Technical Improvements:
- Leverages Google's latest language model for superior:
  * Context understanding and analysis
  * Document summarization accuracy
  * Slack conversation relevance detection
  * Meeting preparation insights quality

Agent now powered by the most advanced Gemini model available! 🤖✨

--- a/.env.example
+++ b/.env.example
@@ -54,7 +54,7 @@ TOOL_DESCRIPTION="Gathers meeting context from Calendar, Drive docs, and Slack t
 REASONING_ENGINE=projects/your-project-number/locations/us-central1/reasoningEngines/your-engine-id
 
 # =============================================================================
-# AI Models (optional - defaults to gemini-2.5-flash)
+# AI Models (using latest Gemini 2.5 Flash)
 # =============================================================================
 ROOT_AGENT_MODEL=gemini-2.5-flash
 SUB_AGENT_MODEL=gemini-2.5-flash
@@ -69,13 +69,18 @@ BRIEF_LEAD_MINUTES=30
 HISTORICAL_LOOKBACK_DAYS=90
 
 # =============================================================================
-# OPTIONAL: Slack Integration
+# REQUIRED FOR FULL PRD COMPLIANCE: Slack Integration
 # =============================================================================
-# Slack Bot Token (for Slack API access)
+# Slack Bot Token (for Slack API access) - Required for F-04: Conversational Context
 SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
 
 # Slack Signing Secret (for webhook verification)
 SLACK_SIGNING_SECRET=your-slack-signing-secret
+
+# Note: Slack integration enables:
+# - Automatic channel detection based on meeting titles
+# - Recent message analysis for meeting context
+# - AI-powered relevance filtering of discussions
 
 # =============================================================================
 # OAuth Scopes (used by create_authorization.sh)
