📄 Add .env.example template for easy configuration setup

--- a/.env.example
+++ b/.env.example
@@ -1,89 +1,28 @@
-# =============================================================================
-# MEETING PREP AGENT CONFIGURATION - EXAMPLE
-# =============================================================================
-# Copy this file to .env and fill in your actual values
-# NEVER commit .env file to version control!
-
-# =============================================================================
-# REQUIRED: AgentSpace / ADK Configuration
-# =============================================================================
-# Your Google Cloud Project ID (required)
+# Google Cloud Configuration
 GOOGLE_CLOUD_PROJECT=your-project-id
-
-# Your Google Cloud Project Number (required for agent creation)
-GOOGLE_CLOUD_PROJECT_NUMBER=your-project-number
-
-# Google Cloud region (required)
 GOOGLE_CLOUD_LOCATION=us-central1
+STAGING_BUCKET=gs://your-project-staging-bucket
 
-# Cloud Storage bucket for staging (required)
-STAGING_BUCKET=gs://your-staging-bucket
-
-# AgentSpace Authorization ID (set after running create_authorization.sh)
+# Agent Configuration  
+AGENT_DISPLAY_NAME=Meeting_Prep_Agent
 AUTH_ID=meeting-prep-auth
 
-# Display name for your agent
-AGENT_DISPLAY_NAME=Meeting_Prep_Agent
-
-# =============================================================================
-# REQUIRED: OAuth 2.0 Credentials (for AgentSpace)
-# =============================================================================
-# Get these from Google Cloud Console > APIs & Services > Credentials
-CLIENT_ID=your-oauth-client-id
-CLIENT_SECRET=your-oauth-client-secret
-
-# =============================================================================
-# REQUIRED: AgentSpace Configuration
-# =============================================================================
-# Your AgentSpace application identifier
-AS_APP=your-agentspace-app-id
-
-# Assistant ID (usually "default_assistant")
-ASSISTANT_ID=default_assistant
-
-# Unique agent name
-AGENT_NAME=meeting-prep-agent
-
-# Agent description
-AGENT_DESCRIPTION="Prepares concise meeting briefs with Calendar, Drive, and Slack context"
-
-# Tool description
-TOOL_DESCRIPTION="Gathers meeting context from Calendar, Drive docs, and Slack to prepare comprehensive briefs"
-
-# Reasoning Engine resource name (set after agent deployment)
-REASONING_ENGINE=projects/your-project-number/locations/us-central1/reasoningEngines/your-engine-id
-
-# =============================================================================
-# AI Models (using latest Gemini 2.5 Flash)
-# =============================================================================
+# AI Models
 ROOT_AGENT_MODEL=gemini-2.5-flash
 SUB_AGENT_MODEL=gemini-2.5-flash
 
-# =============================================================================
-# Scheduling / Behavior Configuration
-# =============================================================================
-# Minutes before meeting to trigger brief generation
+# Behavior
 BRIEF_LEAD_MINUTES=30
-
-# Days to look back for historical documents
 HISTORICAL_LOOKBACK_DAYS=90
 
-# =============================================================================
-# REQUIRED FOR FULL PRD COMPLIANCE: Slack Integration
-# =============================================================================
-# Slack Bot Token (for Slack API access) - Required for F-04: Conversational Context
-SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
+# Chat Integration Preferences
+GOOGLE_CHAT_ENABLED=true
+CHAT_INTEGRATION_PREFERENCE=both  # Options: "slack", "google_chat", or "both"
 
-# Slack Signing Secret (for webhook verification)
+# Optional: Slack Integration
+SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
 SLACK_SIGNING_SECRET=your-slack-signing-secret
 
-# Note: Slack integration enables:
-# - Automatic channel detection based on meeting titles
-# - Recent message analysis for meeting context
-# - AI-powered relevance filtering of discussions
-
-# =============================================================================
-# OAuth Scopes (used by create_authorization.sh)
-# =============================================================================
-# Space-separated list of required OAuth scopes
-SCOPES="https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/drive.readonly https://www.googleapis.com/auth/userinfo.email"
+# Optional: OAuth Credentials (if needed for custom setup)
+# CLIENT_ID=your-oauth-client-id
+# CLIENT_SECRET=your-oauth-client-secret
