feat: Enhanced Meeting Brief with Gmail Integration and Comprehensive Document Search
🚀 Major Features Added:
- Gmail API integration for email and attachment search between attendees
- Enhanced Google Drive search beyond just meeting attachments
- AI-powered document relevance scoring and ranking
- Comprehensive document table with metadata, relevance scores, and direct links
- Multi-source document discovery (Direct attachments, Gmail, Drive)

📧 Gmail Integration:
- Search emails between meeting attendees
- Extract attachments from relevant emails
- Provide direct links to Gmail messages
- Graceful fallback when Gmail API unavailable

💾 Enhanced Drive Search:
- Search by meeting title, description, and attendee names
- Find related documents beyond direct attachments
- AI-powered relevance scoring based on meeting context

📋 Comprehensive Document Table:
- Beautiful table format with document metadata
- Relevance scores with star ratings (⭐⭐⭐⭐⭐)
- Source indicators: 📎 Direct, 📧 Gmail, 💾 Drive
- Document types with emojis: 📄 Document, 📊 Spreadsheet, 📽️ Presentation

🧠 AI-Powered Analysis:
- Document relevance scoring using Gemini 2.5 Flash
- Enhanced document analysis and insights
- Multi-source document ranking and categorization

🔧 Technical Improvements:
- Added Gmail API integration with email search capabilities
- Implemented document relevance scoring algorithm
- Enhanced document metadata extraction and formatting
- Added comprehensive document table generation
- Improved error handling for multi-API integration

📚 Documentation Updates:
- Updated README.md with Gmail integration setup
- Enhanced .env.example with Gmail OAuth scopes
- Updated update_features.md with new deployment info
- Added Google Chat and scope selection guides

🎯 Deployment:
- New agent: Grab_Meeting_Prep_Agent
- Reasoning Engine: projects/777331773170/locations/us-central1/reasoningEngines/6987198482423480320
- Authorization: meeting-prep-gmail-auth
- AgentSpace ID: 3458178826058614269

--- a/.env.example
+++ b/.env.example
@@ -97,7 +97,7 @@ CLIENT_ID=your-client-id.apps.googleusercontent.com
 CLIENT_SECRET=your-client-secret
 
 # OAuth 2.0 scopes (space-separated, required for AgentSpace authorization)
-SCOPES="https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/drive.readonly https://www.googleapis.com/auth/chat.messages.readonly https://www.googleapis.com/auth/chat.spaces.readonly"
+SCOPES="https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/drive.readonly https://www.googleapis.com/auth/chat.messages.readonly https://www.googleapis.com/auth/chat.spaces.readonly https://www.googleapis.com/auth/gmail.readonly"
 
 # =============================================================================
 # Setup Instructions
